--- a/linear_algebra/Chapter2_linear_algebra.ipynb
+++ b/linear_algebra/Chapter2_linear_algebra.ipynb
@@ -1,15 +1,40 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
-   "outputs": [],
    "source": [
-    ""
+    "# Chapter 2 - Linear Algebra\n",
+    "\n",
+    "## The following notebook is based on the \\*Mathematics For Machine Learning\\* textbook written by:\n",
+    "1. Marc Peter Deisenroth\n",
+    "2. A. Aldo Faisal\n",
+    "3. Cheng Soon Ong\n",
+    "\n",
+    "## What does this notebook contain?\n",
+    "1. It contains all the concepts from this book written in Python Code."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# What is a Linear Algebra?\n",
+    "- Linear Algebra is the study of Vectors and certain rules to manipulate Vectors.\n",
+    "-\n",
+    "\n",
+    "# What is a Vector?\n",
+    "- Vector is an object that can be added together and multiplied by scalars to produce another object of the same kind.\n",
+    "- Any object satisfying this condition is considered a Vector.\n",
+    "- Eg:- Geometric vectors, Polynomials, Audio Signals, $\\\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
