--- a/linear_algebra/Chapter_2_Linear_Algebra.ipynb
+++ b/linear_algebra/Chapter_2_Linear_Algebra.ipynb
@@ -11,7 +11,7 @@
         "kp0oFPJBkCHX"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNsdz1smN3lPoIGdxT+YOuI",
+      "authorship_tag": "ABX9TyNNXNGtd7zhF8S+EPz/9W6n",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -459,12 +459,106 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## 2.3.2 Elementary Transformations:\n",
+        "\n",
+        "### Gaussian Elimination:\n",
+        "* It is an Algorithm that performs elementary transformations to bring a system of Linear Equations into reduced Row-Echelon form.\n",
+        "\n",
+        "### Row-Echelon Form:\n",
+        "* A Matrix is in Row-Echelon form if:\n",
+        "  * All rows that contain only Zeros are at the bottom of the matrix. \n",
+        "  * Correspondingly, all rows that contain at least one nonzero element are on top of rows that contain only zeros.\n",
+        "  * Looking at non zero rows only, the firt nonzero number from the left (also called the *pivot* or the *leading coefficient*) is always strictly to the right of the pivot of the row above it."
+      ],
+      "metadata": {
+        "id": "gXdXRBnWzjmL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Importing NumPy Library\n",
+        "import numpy as np\n",
+        "import sys\n",
+        "\n",
+        "# Reading number of unknowns\n",
+        "n = int(input('Enter number of unknowns: '))\n",
+        "\n",
+        "# Making numpy array of n x n+1 size and initializing \n",
+        "# to zero for storing augmented matrix\n",
+        "a = np.zeros((n,n+1))\n",
+        "\n",
+        "print(f\"Matrix A before inputting coefficients \\n {a}\")\n",
+        "\n",
+        "# Making numpy array of n size and initializing \n",
+        "# to zero for storing solution vector\n",
+        "x = np.zeros(n)\n",
+        "\n",
+        "print(f\"Solution Vector : \\n {x}\")\n",
+        "\n",
+        "# Reading augmented matrix coefficients\n",
+        "print('Enter Augmented Matrix Coefficients:')\n",
+        "for i in range(n):\n",
+        "    for j in range(n+1):\n",
+        "        a[i][j] = float(input( 'a['+str(i)+']['+ str(j)+']='))\n",
+        "\n",
+        "print(f\"Matrix A before applying Gauss Elimination: \\n {a}\")\n",
+        "\n",
+        "# Applying Gauss Elimination\n",
+        "for i in range(n):\n",
+        "    if a[i][i] == 0.0:\n",
+        "        sys.exit('Divide by zero detected!')\n",
+        "        \n",
+        "    for j in range(i+1, n):\n",
+        "        ratio = a[j][i]/a[i][i]\n",
+        "        \n",
+        "        for k in range(n+1):\n",
+        "            a[j][k] = a[j][k] - ratio * a[i][k]\n",
+        "            print(f\"After Each iteration of k loop: \\n {a}\")\n",
+        "\n",
+        "print(a)\n",
+        "# Back Substitution\n",
+        "x[n-1] = a[n-1][n]/a[n-1][n-1]\n",
+        "\n",
+        "for i in range(n-2,-1,-1):\n",
+        "    x[i] = a[i][n]\n",
+        "    \n",
+        "    for j in range(i+1,n):\n",
+        "        x[i] = x[i] - a[i][j]*x[j]\n",
+        "    \n",
+        "    x[i] = x[i]/a[i][i]\n",
+        "\n",
+        "# Displaying solution\n",
+        "print('\\nRequired solution is: ')\n",
+        "for i in range(n):\n",
+        "    print('X%d = %0.2f' %(i,x[i]), end = '\\t')\n"
+      ],
+      "metadata": {
+        "id": "ZGIGOL2aAKkY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "4\n"
+      ],
+      "metadata": {
+        "id": "vPnSXrSB2NCy"
+      },
+      "execution_count": 35,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [
         ""
       ],
       "metadata": {
-        "id": "MZTqw5oztLn3"
+        "id": "jb65rKs2Ad3R"
       },
       "execution_count": null,
       "outputs": []
