--- a/linear_algebra/Chapter_2_Linear_Algebra.ipynb
+++ b/linear_algebra/Chapter_2_Linear_Algebra.ipynb
@@ -6,12 +6,13 @@
       "name": "Chapter_2_Linear_Algebra.ipynb",
       "provenance": [],
       "collapsed_sections": [
-        "D8GCYatniQ-f",
-        "PXDME2s7ig_S",
-        "kp0oFPJBkCHX"
+        "kp0oFPJBkCHX",
+        "lytFqJ2todp4",
+        "21qt5cxbpfZt",
+        "lOaOJIZys39_"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNNXNGtd7zhF8S+EPz/9W6n",
+      "authorship_tag": "ABX9TyOEA+EOMRmXVB/fvDxRbaQi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -208,7 +209,7 @@
         "id": "_-f-RZ_Iiefs",
         "outputId": "8df3023b-1214-4dcc-b60e-de663b636386"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -290,7 +291,7 @@
         "id": "TQ1qlilbin7U",
         "outputId": "f20bf542-fc92-43cc-82c5-16781b773087"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -357,7 +358,7 @@
         "id": "MuKrW38Sk1uz",
         "outputId": "3201e172-f6f4-4f7f-bf5e-4c0f11e58f27"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -401,7 +402,7 @@
         "id": "kMnUp4g2oi5n",
         "outputId": "bd789cb3-3b04-4a92-e621-f99d4edfe534"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -542,23 +543,53 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [
-        "4\n"
-      ],
-      "metadata": {
-        "id": "vPnSXrSB2NCy"
-      },
-      "execution_count": 35,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
         ""
       ],
       "metadata": {
-        "id": "jb65rKs2Ad3R"
+        "id": "V9-SXSDGNEJh"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 2.4 Vector Spaces:\n",
+        "\n",
+        "* Vector Spaces is a structured space in which Vectors live. \n",
+        "* If we 2 Vectors **A** & **B** then we can create an entire Vector Space by adding this two Vectors or by multiplying this two Vectors with any Scalar values and then adding them.\n",
+        "* These 2 Vectors are also referred as **Basis Vectors**. We will learn this is later part. "
+      ],
+      "metadata": {
+        "id": "p8ZMJ-QhPP3I"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 2.5 Linear Independence:\n",
+        "\n",
+        "## Linear Combination:\n",
+        "* Consider a Vector Space **V** and a finite number of vectors **$x_1$,$x_2$....,$x_k$ $\\in$ V** of the form\n",
+        "* **u** = $λ_1$$x_1$ + $λ_2$$x_2$ + ..... + $λ_k$$x_k$ = $∑_{i=1}^{k}$$λ_i$$x_i$ $∈$ **V**\n",
+        "* with $λ_1$, $λ_2$,.....,$λ_k$ $∈$ $\\mathbb{R}$ is a *linear combination* of the vectors $x_1$,$x_2$,......,$x_k$.\n",
+        "* In future concepts you will see that we are more interested in the nontrivial *linear combincations* that is when not all coefficients ($λ_1$, $\\lambda_2$....) are 0.\n",
+        "\n",
+        "## Linear Independence:\n",
+        "\n",
+        "* "
+      ],
+      "metadata": {
+        "id": "fbpuJFo6jW1k"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " "
+      ],
+      "metadata": {
+        "id": "uhkVQrjyPS9a"
       },
       "execution_count": null,
       "outputs": []
